# VINS-Fusion-FYP

./: .gitignore
config/: ground_plane_params.yaml  vins_rviz_config.rviz
config/realsense_d435i/: left.yaml  realsense_stereo_imu_config.yaml  right.yaml
global_fusion/src/: globalOpt.cpp  globalOptNode.cpp
loop_fusion/src/: pose_graph.cpp  pose_graph_node.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/data/: new_summary.py  summary.py  weight_summary.py
vins_estimator/model_config/: models.yaml
vins_estimator/src/: data_processor_test.cpp  rosNodeTest.cpp  test_cam2world.cpp  test_model.cpp
vins_estimator/src/custom_lossfunction/: custom_lossfunc.cpp  custom_lossfunc.hpp
vins_estimator/src/estimator/: cam2world.cpp  cam2world.hpp  data_processor.cpp  data_processor.hpp  estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  fuzzy.cpp  fuzzy.hpp  ground_feature_fitter.cpp  ground_feature_fitter.hpp  moving_average.cpp  moving_average.hpp  parameters.cpp  parameters.h  svm_inference.cpp  svm_inference.hpp  unet_inference.cpp  unet_inference.hpp  vins2ground.cpp  vins2ground.hpp
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/utility/: visualization.cpp  visualization.h
